rancher/stg/rancher-public-ca-patch.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: rancher
spec:
  template:
    spec:
      containers:
        - name: rancher
          args:
            - "--no-cacerts"
            - "--http-listen-port=80"
            - "--https-listen-port=443"
            - "--add-local=auto"
