rancher/stg/ingressroute-patch.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: rancher
spec:
  routes:
    - match: Host(`rancher.stg.zippelf.com`)
      kind: Rule
      services:
        - name: rancher
          port: 80
      middlewares:
        - name: redirect-https-rancher
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: rancher-tls
spec:
  routes:
    - match: Host(`rancher.stg.zippelf.com`)
      kind: Rule
      services:
        - name: rancher
          port: 80
